dashboard.css
* {
    box-sizing: border-box;
}

body {
    font-family: "Inter", sans-serif;
    background-color: #f8f9fa;
    color: #1a1a2e;
    min-width: 320px;
    margin: 0;
    padding: 0;
}

header {
    background-color: white;
    border-bottom: 2px solid #b1b3b4;
    display: flex;
    width: 100%;
    position: fixed;
    z-index: 100;
}

#sidebar-nav, #main-nav {
    display: flex;
    align-items: center;
}

#sidebar-nav {
    background-color: #30465e;
    width: 200px;
}

#sidebar-nav img {
    height: 50px;
    width: 50px;
    margin: 10px;
}

#menu-btn {
    display: none;
    background: none;
    border: none;
    color: #bec9db;
    cursor: pointer;
}

.hidden {
    display: none;
}

#main-nav {
    padding-left: 20px;
}

.container {
    display: flex;
    min-height: 100vh;
    padding-top: 70px;
}

span {
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.sidebar {
    background-color: #30465e;
    width: 200px;
    flex-shrink: 0;
    display: flex;
    flex-direction: column;
    position: fixed;
    height: calc(100vh - 70px);
}

.sidebar ul {
    list-style: none;
    color: #bec9db;
    font-size: 18px;
    padding: 15px 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.sidebar p {
    margin: 0;
}

.sidebar ul li {
    padding: 10px 10px;
    display: flex;
    align-items: center;
    gap: 15px;
    cursor: pointer;
    margin-left: 10px;
    margin-right: 10px;
}

.sidebar ul li.active {
    background-color: #5b7490;
    border-radius: 10px;
}

.sidebar ul li span {
    font-size: 24px;
}

.sidebar ul li:hover {
    background-color: #5b7490;
    border-radius: 10px;
    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
}

.content {
    display: flex;
    flex-direction: column;
    flex: 1;
    margin-left: 200px;
}

main {
    background-color: #f0f1f3;
    padding: 20px;
    flex: 1;
}

#inventory-section, #orders-section, #clients-section {
    display: none;
}

.top-row {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    margin-bottom: 20px;
}


.total-inventory, .pending-orders, .active-clients {
    background-color: white;
    border: 2px solid #adadaf;
    border-radius: 10px;
    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
    display: flex;
    align-items: center;
    padding: 15px;
    gap: 10px;
    min-width: 425px;
    flex: 1;
}

.total-inventory span, .pending-orders span,.active-clients span {
    font-size: 100px;
}

.inv-numbers, .order-numbers, .client-numbers {
    display: flex;
    gap: 20px;
}

.inv-body h2, .order-body h2, .client-body h2 {
    margin: 0 0 5px 0;
}

.inv-numbers h1, .order-numbers h1, .client-numbers h1 {
    margin: 0;
}

.inv-numbers p, .order-numbers p, .client-numbers p {
    margin: 0;
}

.bottom-row {
    display: flex;
    align-items: flex-start;
    flex-wrap: wrap;
    gap: 20px;
}

#recent-orders, #low-stock, #products, #orders-table, #clients-table, #items {
    background-color: white;
    border-radius: 10px;
    overflow-x: auto;
    border: 2px solid #adadaf;
    width: 100%;
    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
    min-width: min(350px, 100%);
    flex: 1;
}

#recent-orders {
    min-width: 620px;
    flex: 2;
}

#low-stock {
    min-width: 325px;
    flex: 1;
}

table {
    width: 100%;
    border-collapse: collapse;
    text-align: left;
}

caption {
    background-color: #d2d3d5;
    padding: 10px;
    text-align: left;
    border-bottom: 2px solid #adadaf;
    font-weight: 800;
}

th {
    background-color: #e8e9eb;
    padding: 10px;
}

td {
    background-color: white;
    padding: 10px;
    border-top: 1px solid #adadaf;
}

.inventory-controls, .order-controls, .client-controls {
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
    margin-bottom: 20px;
}


.search-products, .search-orders, .search-clients {
    position: relative;
    display: inline-block;
    flex: 1;
}

.search-products span, .search-orders span, .search-clients span {
    color: #adadaf;
    position: absolute;
    font-size: 20px;
    left: 10px;
    top: 50%;
    transform: translateY(-50%);
    pointer-events: none;
}

#search-input-products, #search-input-orders, #search-input-clients {
    outline: none;
    padding-left: 30px;
    height: 40px;
    max-width: 250px;
    border: 2px solid #adadaf;
    border-radius: 10px;
    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
}

.add-product, .add-order, .add-client, .add-item {
    position: relative;
    display: inline-block;
}

.add-product span, .add-order span, .add-client span, .add-item span {
    color: white;
    position: absolute;
    font-size: 20px;
    left: 10px;
    top: 50%;
    transform: translateY(-50%);
    z-index: 1;
    pointer-events: none;
}

#add-product-btn, #add-order-btn, #add-client-btn, #add-item-btn {
    position: relative;
    background-color: #30465e;
    color: white;
    padding-left: 40px;
    padding-right: 20px;
    height: 40px;
    border: none;
    border-radius: 10px;
    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
    cursor: pointer;
}

#products, #orders-table, #clients-table {
    width: 100%;
}

.status-out, .status-low, .status-reorder, .status-good, .status-cancelled, .status-pending, .status-delivered {
    padding: 5px 10px 5px 10px;
    border-radius: 50px;
    color: white;
    white-space: nowrap;
}

.status-out {
    background-color: #696969;
}

.status-low, .status-cancelled {
    background-color: rgb(160, 0, 0);
}

.status-reorder, .status-pending {
    background-color: #e09305;
}

.status-good, .status-delivered {
    background-color: #008000
}

.edit-icon {
    margin-right: 10px;
    cursor: pointer;
}

.delete-icon {
    color: #9d0000;
    cursor: pointer;
}

#error {
    display: none;
    position: fixed;
    top: 10px;
    right: 20px;
    background-color: #9d0000;
    color: white;
    padding: 15px 20px;
    border-radius: 10px;
    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
    z-index: 300;
}

#confirm-modal, #edit-modal, #add-modal {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 200;
    justify-content: center;
    align-items: center;
}

#confirm-box, #edit-box, #add-box {
    background-color: white;
    border-radius: 10px;
    padding: 0 50px 20px 50px;
    margin: 15px;
    max-width: 45%;
    max-height: 100%;
}

#confirm-box, #edit-box {
    text-align: center;
}

#add-buttons {
    text-align: right;
}

#confirm-header, #edit-header, #add-header {
    text-align: left;
}

input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

#edit-inputs, #add-inputs {
    display: flex;
    flex-direction: column;
    gap: 30px;
}

#edit-inputs {
    padding-bottom: 30px;
}

#edit-inputs input, #add-inputs input {
    outline: none;
    padding-left: 10px;
    height: 40px;
    border: 2px solid #adadaf;
    border-radius: 10px;
    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
}

.form-group {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

#add-inputs h4, #edit-inputs h4 {
    text-align: left;
    margin: 0;
}

select {
    outline: none;
    padding-left: 10px;
    height: 40px;
    border: 2px solid #adadaf;
    border-radius: 10px;
    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
    cursor: pointer;
}

#confirm-yes, #confirm-no, #edit-save, #edit-cancel, #add-save, #add-cancel {
    font-size: 15px;
    color: white;
    padding-left: 20px;
    padding-right: 20px;
    height: 40px;
    border: none;
    border-radius: 10px;
    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
    cursor: pointer;
}

#confirm-yes {
    background-color: #9d0000;
}

#edit-cancel, #add-cancel {
    color: black;
}

#confirm-no, #edit-save, #add-save {
    background-color: #30465e;
}

#add-item-btn {
    margin-right: 80%;
}

.add-buttons-product, .add-buttons-client {
    display: flex;
    justify-content: center;
    padding-top: 30px;
}

.add-buttons-order {
    display: flex;
    justify-content: right;
    padding-top: 0;
}

.total {
    text-align: right;
}
footer {
    background-color: white;
    border-top: 1px solid #b1b3b4;
    padding: 10px 20px;
}

@media (max-width: 1290px) {
    .sidebar p {
        display: none;
    }

    .sidebar, #sidebar-nav {
        width: 65px;
    }

    .sidebar {
        height: 100%;
    }
    #sidebar-nav {
        justify-content: center;
    }

    .sidebar ul {
        align-items: center;
    }

    .content {
        margin-left: 65px;
    }
}

@media (max-width: 768px) {
    header {
        position: fixed;
        flex-direction: column;
    }

    #sidebar-nav {
        width: 100%;
        padding: 10px;
        flex-direction: row;
        justify-content: flex-start;
    }

    #menu-btn {
        display: block;
    }

    #main-nav {
        display: none;
    }

    .container {
        padding-top: 90px;
        flex-direction: column;
    }

    .sidebar {
        display: none;
        position: fixed;
        top: 95px;
        left: 0;
        width: 300px;
        height: 100vh;
        flex-direction: row;
        box-shadow: 8px 1px 22px 5px rgba(0,0,0,0.35);
        -webkit-box-shadow: 8px 1px 22px 5px rgba(0,0,0,0.35);
        -moz-box-shadow: 8px 1px 22px 5px rgba(0,0,0,0.35);
        z-index: 99;
    }

    .sidebar.open {
        display: block;
    }

    .sidebar ul {
        justify-content: center;
        align-items: flex-start;
        width: 100%;
        padding: 10px;
    }

    .sidebar ul li {
        gap: 25px;
        padding: 8px;
        margin: 0;
        font-size: 30px;
        width: 100%;
    }

    .sidebar p {
        display: block;
        font-size: 20px;
    }

    .sidebar ul li span {
        font-size: 30px;
    }

    .content {
        margin-left: 0;
    }

    .top-row {
        flex-direction: column;
    }

    .bottom-row {
        flex-direction: column;
    }

    .total-inventory span, .pending-orders span, .active-clients span {
        font-size: 60px;
    }

    .total-inventory, .pending-orders, .active-clients, #recent-orders, #low-stock {
        min-width: 290px;
        width: 100%
    }
    
    .inv-numbers h1, .order-numbers h1, .client-numbers h1 {
        font-size: 25px;
    }
}

